Implementação do menu e rodape

--- a/Angular/blogPessoal/src/app/menu/menu.component.html
+++ b/Angular/blogPessoal/src/app/menu/menu.component.html
@@ -9,12 +9,12 @@
         <div class="collapse navbar-collapse px-2" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-lg-0 ">
                 <li class="nav-item pl-3">
-                    <p class="text-white fs-16 fw-bold">Jose Luis</p>
+                    <p class="text-white fs-16 fw-bold m-0">Jose Luis</p>
+                    <a href="">
+                    <p class="text-white fs-16 fw-bold">Editar</p>
+                    </a>
                 </li>
 
-                <li class="nav-item pl-3 px-2">
-                    <a class="text-white fs-16 fw-bold">Editar</a>
-                </li>
 
             </ul>
 
@@ -24,7 +24,9 @@
 
             <ul class="navbar-nav ml-auto mb-lg-0 ">
                 <li class="nav-item pl-3">
-                    <a class="text-white fs-16 fw-bold">Sair</a>
+                    <a href="">
+                    <p class="text-white fs-16 fw-bold">Sair</p>
+                    </a>
                 </li>
             </ul>
 
