--- a/Angular/blogPessoal/src/app/rodape/rodape.component.html
+++ b/Angular/blogPessoal/src/app/rodape/rodape.component.html
@@ -1,1 +1,29 @@
-<p>rodape works!</p>
+<footer class="page-footer font-small bg-secondary pt-4">
+    <div class="container"></div>
+    <div class="row">
+        <div class="col-md-12 d-flex justify-content-center">
+
+            <h4 class="text-white">Siga-nos nas redes sociais</h4>
+        </div>
+        <div class="row">
+            <div class="col-md-12 d-flex justify-content-center">
+                <ul class="social-netwhork">
+                    <li>
+                        <a href="https://www.facebook.com/jose.luiis.1217727/" target="_blank" class="icoFacebook" >Facebook</a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.instagram.com/jo_luid/?hl=pt-br" target="_blank" class="icoInsta" >Instagram</a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.linkedin.com/in/joseluiscorreia/" target="_blank" class="icoLinkedin" >Linkedin</a>
+                    </li>
+
+                </ul>
+
+            </div>
+        </div>
+    </div>
+
+</footer>
