--- a/Angular/blogPessoal/src/app/cadastrar/cadastrar.component.html
+++ b/Angular/blogPessoal/src/app/cadastrar/cadastrar.component.html
@@ -46,7 +46,7 @@
                     </div>
 
                     <div class=" d-flex justify-content-center mt-5">
-                        <button type="submit" class="btn btn-danger     me-4">Cancelar
+                        <button type="submit" class="btn btn-danger me-4" routerLink='/entrar'>Cancelar
                         </button>
                         <button type="submit" class="btn btn-success">Cadastrar</button>
                     </div>
