--- a/Angular/blogPessoal/src/app/cadastrar/cadastrar.component.html
+++ b/Angular/blogPessoal/src/app/cadastrar/cadastrar.component.html
@@ -10,18 +10,18 @@
 
                     <div class="form-group">
                         <label for="nome">Nome</label>
-                        <input class="form-control" type="text" name="nome" id="nome" placeholder="Digite o seu nome">
+                        <input [(ngModel)]="userLogin.nome" class="form-control" type="text" name="nome" id="nome" placeholder="Digite o seu nome">
                     </div>
 
                     <div class="form-group">
                         <label for="usuario">Usuário</label>
-                        <input class="form-control" type="text" name="usuario" id="usuario"
-                            placeholder="Digite o seu usuário">
+                        <input [(ngModel)]="userLogin.usuario" class="form-control" type="text" name="usuario" id="usuario"
+                            placeholder="Digite o seu usuário" >
                     </div>
 
                     <div class="form-group">
                         <label for="foto">Link da foto</label>
-                        <input class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto">
+                        <input [(ngModel)]= 'userLogin.foto' class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto">
                     </div>
 
                     <div class="form-group">
@@ -32,7 +32,7 @@
 
                     <div class="form-group">
                         <label for="confirmarSenha">Confirmar senha</label>
-                        <input class="form-control" type="password" name="confirmarSenha" id="confirmarSenha"
+                        <input [(ngModel)]='userLogin.senha' class="form-control" type="password" name="confirmarSenha" id="confirmarSenha"
                             placeholder="Repita a sua senha">
                     </div>
 
