--- a/Angular/blogPessoal/src/app/entrar/entrar.component.html
+++ b/Angular/blogPessoal/src/app/entrar/entrar.component.html
@@ -1,10 +1,14 @@
 <div class="container-fluid">
 
     <div class="row d-flex align-items-center">
+
         <div class="col-md-6">
+
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6">
+
                     <h1 class="text-center mb-3">Entrar</h1>
+
                     <div class="form-group">
                     <label for="usuario" >Usuário</label>
                     <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Digite o seu usuário">
@@ -16,7 +20,7 @@
                     </div>
 
                     <div class="d-flex justify-content-center mt-4">
-                        <button type="submit" class="btn btn-success">Entrar</button>
+                        <button type="submit" class="btn btn-success" (click)='entrar()'>Entrar</button>
                     </div>
 
                     <hr class="mt-5 mb-5">
