--- a/Angular/blogPessoal/src/app/app.component.html
+++ b/Angular/blogPessoal/src/app/app.component.html
@@ -1,6 +1,6 @@
-<!-- <app-menu></app-menu>
+<!-- <app-menu></app-menu> -->
 
-<app-rodape></app-rodape> -->
+<!-- <app-rodape></app-rodape> -->
 
 <!-- <app-entrar></app-entrar> -->
 
