--- a/Angular/blogPessoal/src/app/entrar/entrar.component.html
+++ b/Angular/blogPessoal/src/app/entrar/entrar.component.html
@@ -11,12 +11,12 @@
 
                     <div class="form-group">
                     <label for="usuario" >Usuário</label>
-                    <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Digite o seu usuário">
+                    <input [(ngModel)]='userLogin.usuario' class="form-control" type="text" name="usuario" id="usuario" placeholder="Digite o seu usuário">
                     </div>
 
                     <div class="form-group">
                         <label for="senha" >Senha</label>
-                        <input class="form-control" type="password" name="senha" id="senha" placeholder="Digite a sua sanha">
+                        <input [(ngModel)]='userLogin.senha' class="form-control" type="password" name="senha" id="senha" placeholder="Digite a sua sanha">
                     </div>
 
                     <div class="d-flex justify-content-center mt-4">
@@ -24,8 +24,8 @@
                     </div>
 
                     <hr class="mt-5 mb-5">
-                    <p class="text-center"> 
-                        Não tem uma conta?
+                    
+                    <p class="text-center">Não tem uma conta?
                         <a routerLink='/cadastrar'>Cadastre-se</a>
                     </p>
 
