--- a/Angular/blogPessoal/src/app/tema/tema.component.html
+++ b/Angular/blogPessoal/src/app/tema/tema.component.html
@@ -17,7 +17,7 @@
                       </div>
 
                       <div class="d-flex justify-content-center">
-                          <button class="btn btn-light mb-3" >Cadastrar</button>
+                          <button class="btn btn-light mb-3" >Cadastre-se</button>
                       </div>
 
                   </div>
