Design da tabela tema

--- a/Angular/blogPessoal/src/app/entrar/entrar.component.css
+++ b/Angular/blogPessoal/src/app/entrar/entrar.component.css
@@ -1,5 +1,5 @@
 #img-bg{
-    background-image: url('../../assets/img/fogue2.jpg');
+    background-image: url('../../assets/img/Astronaut-bro.svg');
 
     min-height: 695px;
 
