--- a/Angular/blogPessoal/src/app/tema/tema.component.html
+++ b/Angular/blogPessoal/src/app/tema/tema.component.html
@@ -13,11 +13,11 @@
               <div class="row d-flex justify-content-center">
                   <div class="col-md-3">
                       <div class="form-group mb-3">
-                          <input type="text" class="form-control" id="descricao" placeholder="Para cadastrar um novo, digite aqui:">
+                          <input [(ngModel)]='tema.descricao' type="text" class="form-control" id="descricao" placeholder="Para cadastrar um novo, digite aqui:">
                       </div>
 
                       <div class="d-flex justify-content-center">
-                          <button class="btn btn-light mb-3" >Cadastre-se</button>
+                          <button class="btn btn-light mb-3" (click)='cadastrar()' >Cadastrar</button>
                       </div>
 
                   </div>
@@ -44,29 +44,22 @@
                         <thead>
                           <tr>
                             <th scope="col">#</th>
-                            <th scope="col">First</th>
-                            <th scope="col">Last</th>
-                            <th scope="col">Handle</th>
+                            <th scope="col">Descrição</th>
+                            <th scope="col" style="text-align: right;">Modificações</th>
+                           
                           </tr>
                         </thead>
                         <tbody>
-                          <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                          <tr *ngFor='let item of listaTemas '>
+                            <th>{{item.id}}</th>
+                            <td>{{item.descricao}}</td>
+                            <td class="d-flex justify-content-end">
+                              <button class="btn btn-info me-3">Editar</button>
+                              <button class="btn btn-danger">Apagar</button>
+                            </td>
+                           
                           </tr>
-                          <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                          </tr>
-                          <tr>
-                            <th scope="row">3</th>
-                            <td colspan="2">Larry the Bird</td>
-                            <td>@twitter</td>
-                          </tr>
+
                         </tbody>
                      
               </table>
