--- a/Angular/blogPessoal/src/app/delete/tema-delete/tema-delete.component.html
+++ b/Angular/blogPessoal/src/app/delete/tema-delete/tema-delete.component.html
@@ -1,4 +1,4 @@
-<div class="container mb-5 mt-5">
+<!-- <div class="container mb-5 mt-5">
     <div class="row mb-5">
         <div class="col-md-12">
             <h1 class="text-center text-secondary">Apagar Tema</h1>
@@ -22,4 +22,47 @@
 
         </div>
     </div>
+</div> -->
+
+
+
+<div class="container mb-5 mt-5">
+    <div class="row mb-5">
+        <div class="col-md-12 text-center text-secondary">
+            <h1>Apagar tema</h1>
+
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="col md-12 text-center text-secondary">
+            <h4>Isso sera irreversivel, tem certeza que deseja apagar esse Tema e todas as postagens relacionadas a ele?</h4>
+        </div>
+    </div>
+    <div class="row text-center text-info">
+        <div class="col-md-12">
+            <h5>Tema: {{tema.descricao}} </h5>
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col-md-12 d-flex justify-content-center ">
+            <button class="btn btn-danger me-2" routerLink='/tema' >Não</button>
+            <button class="btn btn-success" (click)='apagar()' >Sim</button>
+        </div>
+
+    </div>
+
+    
+
+
+
 </div>
+
+
+
+
+
+
+
+
+
